[package]
name = "usearch"
version = "2.17.7"
authors = ["Ash Vardanian <1983160+ashvardanian@users.noreply.github.com>"]
description = "Smaller & Faster Single-File Vector Search Engine from Unum"
edition = "2021"
license = "Apache-2.0"
publish = true
repository = "https://github.com/unum-cloud/usearch"
documentation = "https://unum-cloud.github.io/usearch"
include = [
    "/rust/**",
    "/include/**",
    "/fp16/include/**",
    "/simsimd/include/**",
    "/simsimd/c/**",
    "/stringzilla/include/**",
    "/build.rs",
]

[features]
default = [
    "simsimd",
    "fp16lib",
    "rayon",
    "half",
] # SimSIMD is enabled by default
simsimd = [] # No need to do anything to enable SimSIMD by default
fp16lib = [] # Without this FP16 we lose precision downcasting
openmp = [] # Optional: Users can enable OpenMP
rayon = ["dep:rayon"]
half = ["dep:half"]

[lib]
name = "usearch"
path = "rust/lib.rs"

[dependencies]
bytemuck = "1.22.0"
cxx = "1.0"
half = { version = "2.6.0", features = ["bytemuck"], optional = true }
rayon = { version = "1.10.0", optional = true }

[build-dependencies]
cxx-build = "1.0"
